samples/_failures_safe/1761224210_af273a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58e4df1f.c:169:1: error: expected identifier or ‘(’ at end of input
  169 | const char
      | ^~~~~
